examples/core/errors/type_errors/02_annotation_mismatch.core.tao
let x : $Type = $I32
